# QuasarX-OS

./: README.md
rust_kernel/: Cargo.toml  link.ld  x86_64-kernel.json
rust_kernel/src/: allocator.rs  build.rs  fat12.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  shell.rs  timer.rs  vfs.rs  vga_buffer.rs
