[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2021"

#[package.metadata.bootimage]
#default-target = "x86_64-kernel.json"

[package.metadata.bootimage]
default-target = "x86_64-unknown-none"

[dependencies]
volatile = "0.4"
lazy_static = "1.4"
x86_64 = "0.14"
bootloader = "0.11"
linked_list_allocator = "0.9"
lazy_static = "1.4"
spin = "0.9"
pic8259 = "0.10.1"

[profile.dev]
panic = "abort"
codegen-units = 1
opt-level = "z"
strip = true

[profile.release]
panic = "abort"

[build-dependencies]
base64 = "0.21"

[workspace]
